--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,8 @@ dependencies {
 
 	// Fernflower decompiler
 	compile 'org.jetbrains.java.decompiler:fernflower:sponge-SNAPSHOT'
+
+	provided fg.deobf('curse.maven:curios-309927:3343065')
 }
 
 jar {
