--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ mixin {
 
 minecraft {
 	mappings 'snapshot', project.properties.mappingsVersion
-	// accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 	runs {
 		client {
 			property 'forge.logging.console.level', 'debug'
@@ -98,7 +97,7 @@ dependencies {
 	// Fernflower decompiler
 	compile 'org.jetbrains.java.decompiler:fernflower:sponge-SNAPSHOT'
 
-	provided fg.deobf('curse.maven:curios-309927:3343065')
+	compileClasspath fg.deobf('curse.maven:curios-309927:3343065')
 }
 
 jar {
