--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,12 +1,13 @@
 modLoader="javafml"
 loaderVersion="[36,)"
-license="MIT"
+license="CC BY-NC-ND 4.0"
 
 [[mods]]
 modId="equipmentcompare"
 version="${version}"
 displayName="Equipment Compare"
 displayURL="https://anthonyhilyard.com/"
+updateJSONURL="https://mc-curse-update-checker.herokuapp.com/502561"
 logoFile="icon.png"
 authors="Grend"
 description='''Adds additional tooltips when hovering over equipment for easy comparisons.'''
