--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,13 @@ mixin {
 }
 
 minecraft {
-	mappings 'snapshot', project.properties.mappingsVersion
+	mappings channel: 'official', version: project.mcVersion
+
 	runs {
 		client {
-			property 'forge.logging.console.level', 'debug'
-			property 'terminal.ansi', 'true'
+			properties 'forge.logging.markers': ''
+			properties 'forge.logging.console.level': 'debug'
+			properties 'terminal.ansi': 'true'
 			workingDirectory project.file('run').canonicalPath
 			source sourceSets.main
 
@@ -97,7 +99,9 @@ dependencies {
 	// Fernflower decompiler
 	compile 'org.jetbrains.java.decompiler:fernflower:sponge-SNAPSHOT'
 
+	compile 'curse.maven:iceberg-520110:3440258'
 	compileClasspath fg.deobf('curse.maven:curios-309927:3343065')
+	compileClasspath fg.deobf('curse.maven:baubles-366844:3179641')
 }
 
 jar {
