--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -25,3 +25,17 @@ description='''Adds additional tooltips when hovering over equipment for easy co
 	versionRange="[1.16.5]"
 	ordering="NONE"
 	side="BOTH"
+
+[[dependencies.equipmentcompare]]
+	modId="iceberg"
+	mandatory=true
+	versionRange="[1,)"
+	ordering="NONE"
+	side="BOTH"
+
+[[dependencies.equipmentcompare]]
+	modId="baubles"
+	mandatory=false
+	versionRange="[1.8.7]"
+	ordering="NONE"
+	side="BOTH"
