--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,20 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
 		classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
 	}
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'eclipse'
 
-archivesBaseName = name + '-' + mcVersion
+archivesBaseName = project.name + '-' + project.mcVersion
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+java.toolchain.languageVersion = JavaLanguageVersion.of(16)
 
 mixin {
-	add sourceSets.main, "equipmentcompare.refmap.json"
+	add sourceSets.main, "${project.name.toLowerCase()}.refmap.json"
 }
 
 minecraft {
@@ -34,13 +35,7 @@ minecraft {
 
 			arg "-mixin.debug=true"
 			arg "-mixin.checks.interfaces=true"
-			arg "-mixin.config=equipmentcompare.mixins.json"
-
-			mods {
-				equipmentcompare {
-					source sourceSets.main
-				}
-			}
+			arg "-mixin.config=${project.name}.mixins.json".toLowerCase()
 		}
 	}
 }
@@ -50,34 +45,6 @@ repositories {
 		name = "CurseMaven"
 		url "https://www.cursemaven.com"
 	}
-	maven {
-		// For fernflower
-		name = 'Sponge'
-		url = 'https://repo.spongepowered.org/maven'
-	}
-}
-
-// Process resources on build
-processResources {
-	// This will ensure that this task is redone when the versions change.
-	inputs.property 'version', project.version
-
-	// Replace stuff in mods.toml, nothing else
-	from(sourceSets.main.resources.srcDirs) {
-		include 'META-INF/mods.toml'
-
-		// Replace version
-		expand 'version':project.version
-	}
-
-	// Copy everything else except the mods.toml
-	from(sourceSets.main.resources.srcDirs) {
-		exclude 'META-INF/mods.toml'
-	}
-}
-
-configurations {
-	provided
 }
 
 sourceSets {
@@ -85,24 +52,18 @@ sourceSets {
 		resources {
 			srcDir 'src/generated/resources'
 		}
-		compileClasspath += configurations.provided
-	}
-	fernflower {
-		compileClasspath += main.output
 	}
 }
 
 dependencies {
-	minecraft 'net.minecraftforge:forge:' + project.properties.mcVersion + '-' + forgeVersion
-	annotationProcessor 'org.spongepowered:mixin:0.8:processor'
+	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
+	annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
 
-	// Fernflower decompiler
-	compile 'org.jetbrains.java.decompiler:fernflower:sponge-SNAPSHOT'
-
-	compile 'curse.maven:iceberg-520110:3476658'
-	compileClasspath fg.deobf('curse.maven:curios-309927:3343065')
-	compileClasspath fg.deobf('curse.maven:baubles-366844:3179641')
-	compileClasspath 'curse.maven:legendarytooltips-532127:3481460'
+	compileOnly 'curse.maven:iceberg-520110:3491123'
+	runtimeOnly 'curse.maven:iceberg-520110:3491123'
+	compileClasspath fg.deobf('curse.maven:curios-309927:3457073')
+	compileClasspath fg.deobf('curse.maven:baubles-366844:3423447')
+	// compileClasspath 'curse.maven:legendarytooltips-532127:3481460'
 }
 
 jar {
@@ -114,6 +75,6 @@ jar {
 					"Implementation-Version": project.version,
 					"Implementation-Vendor" : project.author,
 					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-					"MixinConfigs": "equipmentcompare.mixins.json"],)
+					"MixinConfigs": "${project.name.toLowerCase()}.mixins.json"],)
 	}
 }
