--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-name=EquipmentCompare
-group=com.anthonyhilyard.equipmentcompare
+name=${rootProject.name}
+group=com.anthonyhilyard.${name.toLowerCase()}
 author=anthonyhilyard
 version=1.2.5
-mcVersion=1.16.5
-forgeVersion=36.1.0
+mcVersion=1.17.1
+forgeVersion=37.0.90
