--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,28 @@
-buildscript {
-	repositories {
-		maven { url = 'https://files.minecraftforge.net/maven' }
-		maven { url = "https://repo.spongepowered.org/maven" }
-		jcenter()
-		mavenCentral()
-	}
-	dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-		classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
-	}
-}
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'eclipse'
-
-archivesBaseName = project.name + '-' + project.mcVersion
-
-java.toolchain.languageVersion = JavaLanguageVersion.of(16)
-
-mixin {
-	add sourceSets.main, "${project.name.toLowerCase()}.refmap.json"
+plugins {
+	id 'fabric-loom' version '0.9-SNAPSHOT'
+	id 'maven-publish'
 }
 
-minecraft {
-	mappings channel: 'official', version: project.mcVersion
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
-	runs {
-		client {
-			properties 'forge.logging.markers': ''
-			properties 'forge.logging.console.level': 'debug'
-			properties 'terminal.ansi': 'true'
-			workingDirectory project.file('run').canonicalPath
-			source sourceSets.main
+archivesBaseName = project.name + '-' + project.mcVersion + '-fabric'
 
-			arg "-mixin.debug=true"
-			arg "-mixin.checks.interfaces=true"
-			arg "-mixin.config=${project.name}.mixins.json".toLowerCase()
-		}
-	}
-}
+sourceSets.main.java.srcDirs += 'java'
+sourceSets.main.resources.srcDirs += 'resources'
 
 repositories {
 	maven {
 		name = "CurseMaven"
-		url "https://www.cursemaven.com"
+		url = "https://www.cursemaven.com"
+	}
+	maven {
+		name = "Cloth API"
+		url = "https://maven.shedaniel.me/"
+	}
+	maven {
+		name = "Ladysnake Libs"
+		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
 }
 
@@ -56,13 +35,37 @@ sourceSets {
 }
 
 dependencies {
-	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
-	annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
+	minecraft "com.mojang:minecraft:${project.mcVersion}"
+	mappings loom.officialMojangMappings()
+	modImplementation "net.fabricmc:fabric-loader:${project.loaderVersion}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabricVersion}"
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothVersion}") { exclude(group: "net.fabricmc.fabric-api") }
 
-	compileOnly 'curse.maven:iceberg-520110:3496382'
-	runtimeOnly 'curse.maven:iceberg-520110:3496382'
-	compileClasspath fg.deobf('curse.maven:curios-309927:3457073')
-	compileClasspath fg.deobf('curse.maven:baubles-366844:3423447')
+	modImplementation "curse.maven:iceberg-539382:3504699"
+
+	// These are all needed for Trinkets.
+	modApi "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${project.ccaVersion}"
+	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${project.ccaVersion}"
+	modApi "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:${project.ccaVersion}"
+	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:${project.ccaVersion}"
+	modApi "curse.maven:trinkets-341284:3446940"
+}
+
+processResources {
+	inputs.property 'version', project.version
+
+	filesMatching("fabric.mod.json") {
+		expand "version": project.version
+	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = "UTF-8"
+	it.options.release = 16
+}
+
+java {
+	withSourcesJar()
 }
 
 jar {
@@ -73,7 +76,6 @@ jar {
 					"Implementation-Title": project.name,
 					"Implementation-Version": project.version,
 					"Implementation-Vendor" : project.author,
-					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-					"MixinConfigs": "${project.name.toLowerCase()}.mixins.json"],)
+					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
 	}
 }
