--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,7 @@ dependencies {
 	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
 	annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
 
-	compileOnly 'curse.maven:iceberg-520110:3496382'
-	runtimeOnly 'curse.maven:iceberg-520110:3496382'
+	implementation 'curse.maven:iceberg-520110:3496382'
 	compileClasspath fg.deobf('curse.maven:curios-309927:3457073')
 	compileClasspath fg.deobf('curse.maven:baubles-366844:3423447')
 }
