Updated to support Legendary Tooltips 1.2 features.

--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,10 @@ sourceSets {
 
 dependencies {
 	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
-	annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
+	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-	implementation fg.deobf('curse.maven:iceberg-520110:3561115')
+	implementation fg.deobf("curse.maven:iceberg-520110:3586154")
+	compileClasspath fg.deobf('curse.maven:legendarytooltips-532127:3586193')
 	compileClasspath fg.deobf('curse.maven:curios-309927:3551144')
 	compileClasspath fg.deobf('curse.maven:baubles-366844:3545502')
 }
