--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,6 +29,13 @@ description='''Adds additional tooltips when hovering over equipment for easy co
 [[dependencies.equipmentcompare]]
 	modId="iceberg"
 	mandatory=true
-	versionRange="[1.0.30,)"
+	versionRange="[1.0.33,)"
+	ordering="NONE"
+	side="BOTH"
+
+[[dependencies.equipmentcompare]]
+	modId="legendarytooltips"
+	mandatory=false
+	versionRange="[1.2.0,)"
 	ordering="NONE"
 	side="BOTH"
