--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabricVersion}"
 	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothVersion}") { exclude(group: "net.fabricmc.fabric-api") }
 
-	modImplementation "curse.maven:iceberg-539382:3546762"
+	modImplementation "curse.maven:iceberg-539382:3595404"
+	modApi 'curse.maven:forgeconfigapiport-547434:3562302'
+	modApi "curse.maven:legendarytooltips-542478:3595477"
 
 	// These are all needed for Trinkets.
 	modApi "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${project.ccaVersion}"
