--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[39,)"
+loaderVersion="[41,)"
 license="CC BY-NC-ND 4.0"
 
 [[mods]]
@@ -7,7 +7,7 @@ modId="equipmentcompare"
 version="${file.jarVersion}"
 displayName="Equipment Compare"
 displayURL="https://anthonyhilyard.com/"
-updateJSONURL="https://mc-curse-update-checker.herokuapp.com/502561"
+updateJSONURL="https://mc-update-check.anthonyhilyard.com/502561"
 logoFile="icon.png"
 authors="Grend"
 description='''Adds additional tooltips when hovering over equipment for easy comparisons.'''
@@ -15,27 +15,41 @@ description='''Adds additional tooltips when hovering over equipment for easy co
 [[dependencies.equipmentcompare]]
 	modId="forge"
 	mandatory=true
-	versionRange="[39,)"
+	versionRange="[41,)"
 	ordering="NONE"
 	side="BOTH"
 
 [[dependencies.equipmentcompare]]
 	modId="minecraft"
 	mandatory=true
-	versionRange="[1.18.1,1.19)"
+	versionRange="[1.19,)"
 	ordering="NONE"
 	side="BOTH"
 
 [[dependencies.equipmentcompare]]
 	modId="iceberg"
 	mandatory=true
-	versionRange="[1.0.40,)"
+	versionRange="[1.0.44,)"
 	ordering="NONE"
 	side="BOTH"
 
 [[dependencies.equipmentcompare]]
 	modId="legendarytooltips"
 	mandatory=false
-	versionRange="[1.2.0,)"
+	versionRange="[1.2.5,)"
+	ordering="NONE"
+	side="BOTH"
+
+[[dependencies.equipmentcompare]]
+	modId="curios"
+	mandatory=false
+	versionRange="[1.19-5.1.0.1,)"
+	ordering="NONE"
+	side="BOTH"
+
+[[dependencies.equipmentcompare]]
+	modId="baubles"
+	mandatory=false
+	versionRange="[1.10.0.1,)"
 	ordering="NONE"
 	side="BOTH"
