--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -15,10 +15,11 @@ repositories {
 	maven {
 		name = "CurseMaven"
 		url = "https://www.cursemaven.com"
+		content { includeGroup "curse.maven" }
 	}
 	maven {
-		name = "Cloth API"
-		url = "https://maven.shedaniel.me/"
+		name = "Fuzs Mod Resources"
+		url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
 	}
 	maven {
 		name = "Ladysnake Libs"
@@ -26,29 +27,22 @@ repositories {
 	}
 }
 
-sourceSets {
-	main {
-		resources {
-			srcDir 'src/generated/resources'
-		}
-	}
-}
-
 dependencies {
-	minecraft "com.mojang:minecraft:${project.mcVersion}"
+	minecraft "com.mojang:minecraft:${mcVersion}"
 	mappings loom.officialMojangMappings()
-	modImplementation "net.fabricmc:fabric-loader:${project.loaderVersion}"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabricVersion}"
-	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothVersion}") { exclude(group: "net.fabricmc.fabric-api") }
+	modImplementation "net.fabricmc:fabric-loader:${loaderVersion}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabricVersion}"
 
-	modImplementation "curse.maven:iceberg-539382:3595404"
-	modApi 'curse.maven:forgeconfigapiport-547434:3562302'
-	modApi "curse.maven:legendarytooltips-542478:3595477"
+	modImplementation "curse.maven:iceberg-539382:3832794"
+	modImplementation "net.minecraftforge:forgeconfigapiport-fabric:${forgeConfigApiVersion}"
+	modApi "curse.maven:legendarytooltips-542478:3843497"
 
 	// These are all needed for Trinkets.
-	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.ccaVersion}")
-	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.ccaVersion}")
-	modApi "curse.maven:trinkets-341284:3669842"
+	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${ccaVersion}")
+	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${ccaVersion}")
+	modImplementation "curse.maven:trinkets-341284:3820928"
+
+	modImplementation "curse.maven:roughlyenoughitems-310111:3846514"
 }
 
 loom {
@@ -65,7 +59,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
-	it.options.release = 16
+	it.options.release = 17
 }
 
 java {
@@ -74,12 +68,12 @@ java {
 
 jar {
 	manifest {
-		attributes(["Specification-Title": project.name,
-					"Specification-Vendor": project.author,
-					"Specification-Version": "24.0",
-					"Implementation-Title": project.name,
-					"Implementation-Version": project.version,
-					"Implementation-Vendor" : project.author,
+		attributes(["Specification-Title":		project.name,
+					"Specification-Vendor":		project.author,
+					"Specification-Version":	project.version,
+					"Implementation-Title":		project.name,
+					"Implementation-Version":	project.version,
+					"Implementation-Vendor" :	project.author,
 					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
 	}
 }
