--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,12 @@ org.gradle.daemon=false
 name=${rootProject.name}
 group=com.anthonyhilyard.${name.toLowerCase()}
 author=anthonyhilyard
-version=1.2.12
+version=1.3.1
 
-mcVersion=1.18.2
-fabricVersion=0.47.10+1.18.2
-loaderVersion=0.13.3
-clothVersion=6.0.42
-ccaVersion=4.1.3
+mcVersion=1.19
+fabricVersion=0.55.1+1.19
+loaderVersion=0.14.6
+forgeConfigApiVersion=4.0.0
+ccaVersion=5.0.0-beta.1
+trinketsVersion=3.4.0
+reiVersion=4.0.491
