--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,10 +4,10 @@ license="CC BY-NC-ND 4.0"
 
 [[mods]]
 modId="equipmentcompare"
-version="${version}"
+version="${file.jarVersion}"
 displayName="Equipment Compare"
 displayURL="https://anthonyhilyard.com/"
-updateJSONURL="https://mc-curse-update-checker.herokuapp.com/502561"
+updateJSONURL="https://mc-update-check.anthonyhilyard.com/502561"
 logoFile="icon.png"
 authors="Grend"
 description='''Adds additional tooltips when hovering over equipment for easy comparisons.'''
@@ -15,7 +15,7 @@ description='''Adds additional tooltips when hovering over equipment for easy co
 [[dependencies.equipmentcompare]]
 	modId="forge"
 	mandatory=true
-	versionRange="[36,)"
+	versionRange="[36.2,)"
 	ordering="NONE"
 	side="BOTH"
 
@@ -29,7 +29,7 @@ description='''Adds additional tooltips when hovering over equipment for easy co
 [[dependencies.equipmentcompare]]
 	modId="iceberg"
 	mandatory=true
-	versionRange="[1.0.10,)"
+	versionRange="[1.0.45,)"
 	ordering="NONE"
 	side="BOTH"
 
@@ -37,5 +37,12 @@ description='''Adds additional tooltips when hovering over equipment for easy co
 	modId="baubles"
 	mandatory=false
 	versionRange="[1.8.7]"
+	ordering="NONE"
+	side="BOTH"
+
+[[dependencies.legendarytooltips]]
+	modId="legendarytooltips"
+	mandatory=false
+	versionRange="[1.3.1,)"
 	ordering="NONE"
 	side="BOTH"
