Ported to 1.12.2. Added Baubles / Aether support.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
-public net.minecraft.client.gui.screen.inventory.ContainerScreen field_147006_u # hoveredSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_147006_u # hoveredSlot
+public net.minecraft.util.text.translation.LanguageMap func_74808_a()Lnet/minecraft/util/text/translation/LanguageMap; # getInstance
