--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,8 @@ archivesBaseName = project.name + '-' + project.mcVersion
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
-mixin {
-	add sourceSets.main, "${project.name.toLowerCase()}.refmap.json"
-}
-
 minecraft {
-	mappings channel: 'official', version: project.mcVersion
+	mappings channel: 'snapshot', version: '20180814-1.12'
 	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
 	runs {
@@ -45,21 +41,63 @@ minecraft {
 repositories {
 	maven {
 		name = "CurseMaven"
-		url "https://www.cursemaven.com"
+		url = "https://www.cursemaven.com"
 	}
+	maven {
+		name = "Mixin"
+		url = 'https://repo.spongepowered.org/maven'
+	}
+}
+
+configurations {
+	embed
+	implementation.extendsFrom(embed)
 }
 
 dependencies {
 	minecraft 'net.minecraftforge:forge:' + project.mcVersion + '-' + project.forgeVersion
+
+	compileClasspath fg.deobf('curse.maven:legendarytooltips-532127:3622425')
+	
+	embed('org.spongepowered:mixin:0.8') {
+		transitive = false
+		exclude module: 'guava'
+		exclude module: 'commons-io'
+		exclude module: 'gson'
+	}
+
 	annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
 
-	implementation fg.deobf('curse.maven:iceberg-520110:3943132')
-	compileClasspath fg.deobf('curse.maven:legendarytooltips-532127:3943137')
-	compileClasspath fg.deobf('curse.maven:curios-309927:3343065')
-	compileClasspath fg.deobf('curse.maven:baubles-366844:3339230')
+	compileClasspath fg.deobf('curse.maven:baubles-227083:2518667')
+	compileClasspath fg.deobf('curse.maven:aether-255308:3280119')
+}
+
+mixin {
+	add sourceSets.main, "${project.name.toLowerCase()}.refmap.json"
+	config "equipmentcompare.mixins.json"
+}
+
+processResources {
+	duplicatesStrategy 'include'
+	inputs.property "version", project.version
+	inputs.property "mcVersion", project.mcVersion
+
+	from(sourceSets.main.resources.srcDirs) {
+		include 'mcmod.info'
+
+		expand 'version': project.version, 'mcVersion': project.mcVersion
+	}
+
+	from(sourceSets.main.resources.srcDirs) {
+		exclude 'mcmod.info'
+	}
 }
 
 jar {
+	from(configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }) {
+		exclude 'LICENSE.txt', 'META-INF/MANIFSET.MF', 'META-INF/maven/**', 'META-INF/*.RSA', 'META-INF/*.SF'
+	}
+
 	manifest {
 		attributes(["Specification-Title":		project.name,
 					"Specification-Vendor":		project.author,
@@ -68,6 +106,10 @@ jar {
 					"Implementation-Version":	project.version,
 					"Implementation-Vendor" :	project.author,
 					"Implementation-Timestamp":	new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-					"MixinConfigs":				"${project.name.toLowerCase()}.mixins.json"],)
+					"MixinConfigs":				"${project.name.toLowerCase()}.mixins.json",
+					"FMLAT":					"accesstransformer.cfg",
+					"ForceLoadAsMod":			"true",
+					"TweakClass":				"org.spongepowered.asm.launch.MixinTweaker",
+					"TweakOrder":				"0"],)
 	}
 }
