--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[44,)"
+loaderVersion="[41,)"
 license="CC BY-NC-ND 4.0"
 
 [[mods]]
@@ -15,21 +15,21 @@ description='''Adds additional tooltips when hovering over equipment for easy co
 [[dependencies.equipmentcompare]]
 	modId="forge"
 	mandatory=true
-	versionRange="[44.0,)"
+	versionRange="[41.0,)"
 	ordering="NONE"
 	side="BOTH"
 
 [[dependencies.equipmentcompare]]
 	modId="minecraft"
 	mandatory=true
-	versionRange="[1.19.3,)"
+	versionRange="[1.19,1.19.2]"
 	ordering="NONE"
 	side="BOTH"
 
 [[dependencies.equipmentcompare]]
 	modId="iceberg"
 	mandatory=true
-	versionRange="[1.1.1,)"
+	versionRange="[1.1.2,)"
 	ordering="NONE"
 	side="BOTH"
 
