--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,11 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${loaderVersion}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabricVersion}"
 
-	modImplementation "curse.maven:iceberg-539382:3832794"
-	modImplementation "net.minecraftforge:forgeconfigapiport-fabric:${forgeConfigApiVersion}"
-	modApi "curse.maven:legendarytooltips-542478:3843497"
+	//modImplementation "curse.maven:iceberg-539382:3832794"
+	modImplementation files("libs/Iceberg-1.19.3-fabric-1.1.2.jar")
+	modImplementation "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${forgeConfigApiVersion}"
+	//modApi "curse.maven:legendarytooltips-542478:3843497"
+	modApi files("libs/LegendaryTooltips-1.19.3-fabric-1.4.1.jar")
 
 	// These are all needed for Trinkets.
 	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${ccaVersion}")
