Ported 1.3.2 changes.  Fixed modded tool comparisons not working sometimes.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId="equipmentcompare"
 version="${file.jarVersion}"
 displayName="Equipment Compare"
 displayURL="https://anthonyhilyard.com/"
-updateJSONURL="https://mc-curse-update-checker.herokuapp.com/502561"
+updateJSONURL="https://mc-update-check.anthonyhilyard.com/502561"
 logoFile="icon.png"
 authors="Grend"
 description='''Adds additional tooltips when hovering over equipment for easy comparisons.'''
