--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,11 @@ org.gradle.daemon=false
 name=${rootProject.name}
 group=com.anthonyhilyard.${name.toLowerCase()}
 author=anthonyhilyard
-version=1.3.2
+version=1.3.6
 
-mcVersion=1.19.3
-fabricVersion=0.72.0+1.19.3
-loaderVersion=0.14.12
-forgeConfigApiVersion=5.0.6
-ccaVersion=5.0.0-beta.1
-trinketsVersion=3.4.0
+mcVersion=1.19.4
+fabricVersion=0.78.0+1.19.4
+loaderVersion=0.14.19
+forgeConfigApiVersion=6.0.2
+ccaVersion=5.1.0
+trinketsVersion=3.6.0
