--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,10 @@ dependencies {
 	minecraft "net.minecraftforge:forge:${project.mcVersion}-${project.forgeVersion}"
 	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-	implementation fg.deobf("curse.maven:iceberg-520110:4484740")
-	compileClasspath fg.deobf('curse.maven:legendarytooltips-532127:4484744')
+	// implementation fg.deobf("curse.maven:iceberg-520110:4484740")
+	implementation files("libs/Iceberg-1.20.1-forge-1.1.10.jar")
+	compileClasspath files("libs/LegendaryTooltips-1.20.1-forge-1.4.2.jar")
+	// compileClasspath fg.deobf('curse.maven:legendarytooltips-532127:4484744')
 	compileClasspath fg.deobf('curse.maven:curios-309927:4478589')
 	compileClasspath fg.deobf('curse.maven:baubles-366844:3545502')
 }
