--- a/build.gradle
+++ b/build.gradle
@@ -33,16 +33,16 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${loaderVersion}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabricVersion}"
 
-	modImplementation "curse.maven:iceberg-539382:4499842"
+	modImplementation files("libs/Iceberg-1.20.1-fabric-1.1.10.jar")
 	modImplementation "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${forgeConfigApiVersion}"
-	modApi "curse.maven:legendarytooltips-542478:4494149"
+	modApi files("libs/LegendaryTooltips-1.20.1-fabric-1.4.3.jar")
 
 	// These are all needed for Trinkets.
 	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${ccaVersion}")
 	modImplementation include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${ccaVersion}")
-	modImplementation "curse.maven:trinkets-341284:4441758"
+	modImplementation "curse.maven:trinkets-341284:4573009"
 
-	modImplementation "curse.maven:roughlyenoughitems-310111:4440734"
+	modImplementation "curse.maven:roughlyenoughitems-310111:4622769"
 }
 
 loom {
@@ -60,10 +60,6 @@ processResources {
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
 	it.options.release = 17
-}
-
-java {
-	withSourcesJar()
 }
 
 jar {
